--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.3",
+    "firebase-admin": "^13.6.0",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "mermaid": "^10.9.1",
     "next": "15.3.6",
     "patch-package": "^8.0.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
